syntax = "proto3";
package filecoinapi;

message FilecoinTxInput {
    string to = 1;
    string from = 2;
    uint64 nonce = 3;
    string value = 4;
    int64 gasLimit = 5;
    string gasFeeCap = 6;
    string gasPremium = 7;
    uint64 method = 8;
    string params = 9;
}

message FilecoinTxOutput {
    string cid = 1;
    FilecoinTxInput message = 2;
    Signature signature = 3;
}

message Signature {
    uint32  type = 1;
    string  data = 2;
}

